--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,44 @@ body{
 }
 .book-library{
 	background-color:#ffffff;
+	
 }
 .book{
-	background-color:
+	background-color: #f8f8f8;
+	display: flex;
+	flex-direction:column;
+	
+	
+	margin: 0px;
+	border-top: 40px solid white;
+}
+button{
+	width: 100% ;
+	padding: 10px;
+	margin-bottom: 10px;
+	background-color:#2ecc71;
+	color: white;
+	border-radius: 10px;
+}
+.b1{
+	
+}
+img{
+	width: 30%;
+	padding-top: 10px
+	
+}
+.i1{
+	display: flex;
+	justify-content: center;
+}
+h1{
+margin: 0px;
+	padding: 5px;
+	
+}
+h3{
+	margin: 0px;
+	padding: 5px;
+	color: #777777;
 }
